tutorials/1.13.2/forge/index.md
---
layout: page
title: Forge 1.13.2 Tutorials
---

## Read the [Pre-requisites](https://cadiboo.github.io/tutorials/Pre-requisites) first!

> Your Mod Name is the display name of your mod. Should contain only normal alphanumeric characters (a-z, A-Z, 0-9). It must be unique. Try and be innovative when coming up with your Mod Name because no other mod should be named something similar to your mod. If you have two mods with the same modid (which is derived from the mod name), the game will not be able to load.

To start off, Download the [Forge MDK (Mod Development Kit)](http://files.minecraftforge.net/maven/net/minecraftforge/forge/index_1.13.2.html), unzip it to an accessible folder and rename it to the file name of your mod. I put my mods in `/Users/Cadiboo/Developer/Modding/<Mod-File-Name>`.

> Mod file name: the Mod name but replace spaces with “-“. Your mod file name should not contain spaces because maven and gradle (the build tools that Forge mods use) don’t deal well with spaces in files names. Because of this, if you use spaces in your mod file name, people won’t be able to use your mod as a library and have it automatically download

Some examples of mod file names
- NoCubes
- JourneyMap
- Tinkers-Construct
- Inventory-Tweaks

Open up that folder and continue to Chapter 1.  

### Chapter 1 - Setting up the basics
##### [1.0 - Gradle Configuration](/tutorials/1.13.2/forge/1.0-gradle-configuration)
##### [1.1 - Importing the project into your IDE](/tutorials/1.13.2/forge/1.1-importing-project)
##### [1.2 - Main Mod class](/tutorials/1.13.2/forge/1.2-main-mod-class)
##### [1.3 - Event Subscribing](/tutorials/1.13.2/forge/1.3-event-subscribing)
##### [1.4 - First Item](/tutorials/1.13.2/forge/1.4-first-item)
##### [1.5 - First Block](/tutorials/1.13.2/forge/1.5-first-block)
##### [1.6 - First Recipe](/tutorials/1.13.2/forge/1.6-first-recipe)

### Chapter 2 - Version Control (Optional)
##### [2.0 - Making a GitHub Account](/tutorials/1.13.2/forge/2.0-github-account)