tutorials/1.14.4/forge/index.md
---
layout: page
title: Forge 1.14.4 Tutorials
---

## Read the [Pre-requisites](/tutorials/Pre-requisites) first!

> **Mod Name**  
> Your Mod Name is the display name of your mod. Should contain only normal alphanumeric characters (a-z, A-Z, 0-9). It must be unique. Try and be innovative when coming up with your Mod Name because no other mod should be named something similar to your mod. If you have two mods with the same modid (which is derived from the mod name), the game will not be able to load.

To start off, Download the [Forge MDK (Mod Development Kit)](https://files.minecraftforge.net/maven/net/minecraftforge/forge/index_1.14.4.html), unzip it to an accessible folder and rename it to the file name of your mod. I put my mods in `/Users/Cadiboo/Developer/Modding/<Mod-File-Name>`.

> **Mod File Name**  
> Your Mod File Name should be the Mod Name but replace spaces with "-". Your mod file name should not contain spaces because maven and gradle (the build tools that Forge mods use) don’t deal well with spaces in files names. Because of this, if you use spaces in your mod file name, people won’t be able to use your mod as a library and have it automatically download

Some examples of mod file names
- NoCubes
- JourneyMap
- Tinkers-Construct
- Inventory-Tweaks

The Forge MDK contains some extra files that we will not need.  
See which ones are necessary and which ones you can delete [here](./mdk-files).  

Open up that folder and continue to Chapter 1.  

### Chapter 1 - Setting up the basics
##### [1.0 - Gradle Configuration](./1.0-gradle-configuration)
##### [1.1 - Importing the project into your IDE](./1.1-importing-project)
##### [1.2 - Basic Mod](./1.2-basic-mod)
##### [1.3 - Doing Something](./1.3-doing-something)
##### [1.4 - Proxies](./1.4-proxies)
##### [1.5 - First Item](./1.5-first-item)
##### [1.6 - Item Model](./1.6-item-model)
##### [1.7 - ItemGroup](./1.7-itemgroup)
##### [1.8 - Localisation](./1.8-localisation)
##### [1.9 - First Block](./1.9-first-block)
##### [1.10 - BlockItem](./1.10-blockitem) (WIP)
##### [1.11 - Block Loot](./1.11-block-loot) (WIP)
##### [1.12 - First Recipe](./1.12-first-recipe) (WIP)
##### [1.13 - Advanced Model](./1.13-advanced-model) (WIP)

### Chapter 2 - Version Control (Optional)
##### [2.0 - Making a GitHub Account](./2.0-github-account) (WIP)
##### [2.1 - Downloading a Git Client](./2.1-download-git-client) (WIP)
##### [2.2 - Uploading your mod](./2.2-upload-mod) (WIP)
##### [2.3 - Commits](./2.3-commits) (WIP)
##### [2.4 - Branches](./2.4-branches) (WIP)

### Chapter 3 - More advanced modding
##### [3.0 - Block with BlockStates](./3.0-block-with-blockstates) (WIP)
##### [3.1 - TileEntity](./3.1-tileentity)
##### [3.2 - Entity](./3.2-entity) (WIP)
##### [3.3 - Config](./3.3-config) (WIP)
##### [3.4 - Capability](./3.4-capability) (WIP)
